tests/paczka1/small_fuzzy/68633022.err
Error in line 6: BDCm1Plok A376 68,4
Error in line 7: BDCm1Plok A857 97,1
